--- a/JDBCPool/src/configuration.properties
+++ b/JDBCPool/src/configuration.properties
@@ -1,6 +1,6 @@
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/newtest?useSSL=false
+name=com.mysql.jdbc.Driver
+url=jdbc:mysql://localhost:3306/test?useSSL=false&useUnicode=true&characterEncoding=utf-8
 username=root
-password=123456
-minCount=5
-waitTime=5
+password=root
+size=4
+waittime=3
