--- a/server/AtmForServlet/web/WEB-INF/web.xml
+++ b/server/AtmForServlet/web/WEB-INF/web.xml
@@ -4,6 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+    <!-- 登录 -->
     <servlet>
         <servlet-name>login</servlet-name>
         <servlet-class>controller.LoginController</servlet-class>
@@ -11,6 +12,16 @@
     <servlet-mapping>
         <servlet-name>login</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <!-- 查询 -->
+    <servlet>
+        <servlet-name>query</servlet-name>
+        <servlet-class>controller.QueryController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>query</servlet-name>
+        <url-pattern>/query</url-pattern>
     </servlet-mapping>
 
 </web-app>
