--- a/server/AtmForServlet/web/WEB-INF/web.xml
+++ b/server/AtmForServlet/web/WEB-INF/web.xml
@@ -16,12 +16,31 @@
 
     <!-- 查询 -->
     <servlet>
-        <servlet-name>query</servlet-name>
-        <servlet-class>controller.QueryController</servlet-class>
+        <servlet-name>inquiry</servlet-name>
+        <servlet-class>controller.InquiryController</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>query</servlet-name>
-        <url-pattern>/query</url-pattern>
+        <servlet-name>inquiry</servlet-name>
+        <url-pattern>/inquiry</url-pattern>
+    </servlet-mapping>
+
+    <!-- 存款展示拼接 -->
+    <servlet>
+        <servlet-name>deposit</servlet-name>
+        <servlet-class>controller.DepositController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>deposit</servlet-name>
+        <url-pattern>/deposit</url-pattern>
+    </servlet-mapping>
+    <!-- 真正存款 -->
+    <servlet>
+        <servlet-name>doDeposit</servlet-name>
+        <servlet-class>controller.DoDepositController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>doDeposit</servlet-name>
+        <url-pattern>/doDeposit</url-pattern>
     </servlet-mapping>
 
 </web-app>
